Bootstrap is used

--- a/Web/GreenHouse/Views/Home/GetDevices.cshtml
+++ b/Web/GreenHouse/Views/Home/GetDevices.cshtml
@@ -5,11 +5,9 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Devices</h2>
-
 @if(Model.Any())
 {
-    <table>
+    <table class="table table-hover">
         <tr>
             <th>Name</th>
             <th>Summary</th>
