--- a/Web/GreenHouse/Views/Home/Index.cshtml
+++ b/Web/GreenHouse/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<br />
+<br />
+<h4 class="text-center">
+    This is an project for greenhouse monitoring and control via internet.
+</h4>
