--- a/Web/GreenHouse/Views/Home/AddSensorType.cshtml
+++ b/Web/GreenHouse/Views/Home/AddSensorType.cshtml
@@ -1,14 +1,20 @@
 ﻿@model GreenHouse.ViewModels.SensorTypeViewModel
 
 @{
-    ViewBag.Title = "AddSensorType";
+    ViewBag.Title = "Add sensor type";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>AddSensorType</h2>
 
 @using(Html.BeginForm("AddSensorType","Home",FormMethod.Post))
 {
-    @Html.EditorForModel()
-    <input type="submit" value="save" />
+    <div class="form-group">
+        @Html.LabelFor(x=>x.TypeName)
+        @Html.TextBoxFor(x=>x.TypeName, new {@class="form-control" })        
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(x=>x.Dimension)
+        @Html.TextBoxFor(x=>x.Dimension, new {@class="form-control" })        
+    </div>
+    <input type="submit" value="Save" class="btn btn-primary" />
 }
