--- a/Web/GreenHouse/Views/Home/GetSensorTypes.cshtml
+++ b/Web/GreenHouse/Views/Home/GetSensorTypes.cshtml
@@ -5,11 +5,9 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>Sensor types</h2>
-
 @if(Model.Any())
 {
-    <table>
+    <table class="table table-hover">
         <tr>
             <th>TypeName</th>
             <th>Dimension</th>
