--- a/Web/GreenHouse/Views/Home/RegisterDevice.cshtml
+++ b/Web/GreenHouse/Views/Home/RegisterDevice.cshtml
@@ -1,13 +1,18 @@
 ﻿@model GreenHouse.ViewModels.DeviceViewModel
 @{
-    ViewBag.Title = "RegisterDevice";
+    ViewBag.Title = "Register device";
     Layout = "~/Views/_Layout.cshtml";
 }
 
-<h2>RegisterDevice</h2>
-
 @using(Html.BeginForm("RegisterDevice","Home",FormMethod.Post))
 {
-    @Html.EditorForModel()
-    <input type="submit" value="save" />
+    <div class="form-group">
+        @Html.LabelFor(x=>x.Name)
+        @Html.TextBoxFor(x=>x.Name, new {@class="form-control" })        
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(x=>x.Summary)
+        @Html.TextBoxFor(x=>x.Summary, new {@class="form-control" })        
+    </div>
+    <input type="submit" value="Save" class="btn btn-primary" />
 }
