--- a/Web/GreenHouse/Views/Home/AddSensorType.cshtml
+++ b/Web/GreenHouse/Views/Home/AddSensorType.cshtml
@@ -6,15 +6,22 @@
 }
 
 
-@using(Html.BeginForm("AddSensorType","Home",FormMethod.Post))
-{
-    <div class="form-group">
-        @Html.LabelFor(x=>x.TypeName)
-        @Html.TextBoxFor(x=>x.TypeName, new {@class="form-control" })        
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h2>@ViewBag.Title</h2>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(x=>x.Dimension)
-        @Html.TextBoxFor(x=>x.Dimension, new {@class="form-control" })        
+    <div class="panel-body">
+        @using(Html.BeginForm("AddSensorType","Home",FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(x=>x.TypeName)
+                @Html.TextBoxFor(x=>x.TypeName, new {@class="form-control" })        
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x=>x.Dimension)
+                @Html.TextBoxFor(x=>x.Dimension, new {@class="form-control" })        
+            </div>
+            <input type="submit" value="Save" class="btn btn-primary" />
+        }
     </div>
-    <input type="submit" value="Save" class="btn btn-primary" />
-}
+</div>
