--- a/Web/GreenHouse/Views/Home/RegisterDevice.cshtml
+++ b/Web/GreenHouse/Views/Home/RegisterDevice.cshtml
@@ -4,15 +4,23 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 
-@using(Html.BeginForm("RegisterDevice","Home",FormMethod.Post))
-{
-    <div class="form-group">
-        @Html.LabelFor(x=>x.Name)
-        @Html.TextBoxFor(x=>x.Name, new {@class="form-control" })        
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h2>@ViewBag.Title</h2>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(x=>x.Summary)
-        @Html.TextBoxFor(x=>x.Summary, new {@class="form-control" })        
+    <div class="panel-body">
+        @using(Html.BeginForm("RegisterDevice","Home",FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(x=>x.Name)
+                @Html.TextBoxFor(x=>x.Name, new {@class="form-control" })        
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(x=>x.Summary)
+                @Html.TextBoxFor(x=>x.Summary, new {@class="form-control" })        
+            </div>
+            <input type="submit" value="Save" class="btn btn-primary" />
+        }
     </div>
-    <input type="submit" value="Save" class="btn btn-primary" />
-}
+</div>
+
