--- a/Web/GreenHouse/Views/Home/GetDevices.cshtml
+++ b/Web/GreenHouse/Views/Home/GetDevices.cshtml
@@ -13,6 +13,7 @@
 {
     <table class="table table-hover">
         <tr>
+            <th>Id</th>
             <th>Name</th>
             <th>Token</th>
             <th>Summary</th>
@@ -21,6 +22,7 @@
         @foreach(var item in Model)
         {
         <tr>
+            <td>@item.Id</td>
             <td>@item.Name</td>
             <td>@item.Token</td>
             <td>@item.Summary</td>
