--- a/Web/GreenHouse/Views/Home/GetSensorData.cshtml
+++ b/Web/GreenHouse/Views/Home/GetSensorData.cshtml
@@ -82,7 +82,7 @@
         //},
         data: {
             labels:  @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Timestamps)),
-            datasets: @Html.Raw(  @Newtonsoft.Json.JsonConvert.SerializeObject(Model.DataSets))
+            datasets: @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.DataSets))
         },
         options: {
             responsive: true,
@@ -116,14 +116,14 @@
     };
 
 
-    $.each(config.data.datasets, function (i, dataset) {
-        var background = randomColor(0.5);
-        dataset.borderColor = background;
-        dataset.backgroundColor = background;
-        dataset.pointBorderColor = background;
-        dataset.pointBackgroundColor = background;
-        dataset.pointBorderWidth = 1;
-    });
+    //$.each(config.data.datasets, function (i, dataset) {
+    //    var background = randomColor(0.5);
+    //    dataset.borderColor = background;
+    //    dataset.backgroundColor = background;
+    //    dataset.pointBorderColor = background;
+    //    dataset.pointBackgroundColor = background;
+    //    dataset.pointBorderWidth = 1;
+    //});
 
 
     window.onload = function () {
