--- a/Web/GreenHouse/Views/_Layout.cshtml
+++ b/Web/GreenHouse/Views/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/Styles/bootstrap.min.css" />
+    <link href="~/Content/Styles/SensorMap.css" rel="stylesheet" />
     <script src="~/Script/jquery-1.11.3.min.js"></script>
     <script src="~/Script/bootstrap.min.js"></script>
 </head>
