--- a/Web/GreenHouse/Views/Home/Index.cshtml
+++ b/Web/GreenHouse/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <br />
 <br />
 <h4 class="text-center">
-    This is an project for greenhouse monitoring and control via internet.
+    Sensors data map.
 </h4>
 
 <script src="~/Scripts/jquery.signalR-2.2.0.min.js"></script>
